--- a/packages/tailwind/tsconfig.json
+++ b/packages/tailwind/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "es2022",
     "module": "commonjs",
     "moduleResolution": "node",
-    "declaration": true,
+    "declaration": false,
     "strict": true,
     "incremental": true,
     "esModuleInterop": true,
@@ -12,6 +12,7 @@
     "strictPropertyInitialization": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "emitDeclarationOnly": false,
     "resolveJsonModule": true,
     "jsx": "react-jsx",
     "allowJs": true,
