--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -27,6 +27,7 @@ jobs:
       dependency-hash: ${{ steps.extract-dependencies.outputs.DEPENDENCY_HASH }}
       rocketicons-tgz: ${{ steps.generated-pkg-name.outputs.PKG_FILE }}
       rocketicons-artifact-id: ${{ contains(steps.prepare-release.outputs.TAG_NAME, 'release') == true && 'deployable-artifacts' || 'rocketicons-pkg' }}
+      vercel-url-alias: ${{ steps.branch-to-url.outputs.URL_ID }}${{ vars.VERCEL_ALIAS_DOMAIN }}
 
     steps:
       - name: Checkout
@@ -94,6 +95,11 @@ jobs:
       - name: Set output as environment variable
         run: echo "TAG_NAME=${{ steps.prepare-release.outputs.TAG_NAME }}" >> $GITHUB_ENV
 
+      - name: Branch Name to Url
+        id: branch-to-url
+        run: |
+          echo "URL_ID=$(echo "${{ github.head_ref }}" | tr -s ' ' | tr '[:upper:]' '[:lower:]' | sed 's,[ /],-,g')" >> $GITHUB_OUTPUT
+
       - name: Get genereated package name
         id: generated-pkg-name
         run: echo "PKG_FILE=$(ls -1 -t *.tgz | head -1)" >> $GITHUB_OUTPUT
@@ -137,5 +143,7 @@ jobs:
       dependencies-hash: ${{ needs.prepare-artifacts.outputs.dependency-hash }}
       rocketicons-tgz: ${{ needs.prepare-artifacts.outputs.rocketicons-tgz }}
       rocketicons-artifact-id: ${{ needs.prepare-artifacts.outputs.rocketicons-artifact-id }}
+      vercel-url-alias: ${{ needs.prepare-artifacts.outputs.vercel-url-alias }}
+      branch: ${{ github.head_ref }}
     secrets:
       token: ${{ secrets.VERCEL_TOKEN }}
