--- a/.github/workflows/publish-ignition.yml
+++ b/.github/workflows/publish-ignition.yml
@@ -42,6 +42,15 @@ on:
         type: string
         default: ${{ vars.VERCEL_PROJECT_ID }}
 
+      vercel-url-alias:
+        required: false
+        type: string
+        default: ${{ vars.VERCEL_PROD_DOMAIN }}
+
+      branch:
+        required: true
+        type: string
+
     secrets:
       token:
         required: true
@@ -50,7 +59,7 @@ jobs:
   publish:
     env:
       SKIP_GENERATE_IGNITION_STATICS: true
-      NEXT_PUBLIC_APP_URL: ${{ vars.NEXT_PUBLIC_APP_URL }}
+      NEXT_PUBLIC_APP_URL: https://${{ inputs.vercel-url-alias }}
       NEXT_PUBLIC_VERCEL_ENV: ${{ inputs.env }}
       VERCEL_ORG_ID: ${{ inputs.vercel-org-id }}
       VERCEL_PROJECT_ID: ${{ inputs.vercel-project-id }}
@@ -117,6 +126,17 @@ jobs:
         working-directory: ./ignition
         run: npx vercel pull --yes --environment=${{ env.NEXT_PUBLIC_VERCEL_ENV }} --token=${{ secrets.token }}
 
+      - name: Set NEXT_PUBLIC_APP_URL
+        if: ${{ env.NEXT_PUBLIC_VERCEL_ENV != 'production' }}
+        run: echo "NEXT_PUBLIC_APP_URL=https://${{ inputs.vercel-url-alias }}" >> $GITHUB_ENV
+
+      - name: Set Vercel Environment Variables
+        if: ${{ env.NEXT_PUBLIC_VERCEL_ENV != 'production'}}
+        continue-on-error: true
+        working-directory: ./ignition
+        run: |
+          echo "${{ env.NEXT_PUBLIC_APP_URL }}" | npx vercel env add NEXT_PUBLIC_APP_URL ${{ env.NEXT_PUBLIC_VERCEL_ENV }} ${{ inputs.branch }} --token=${{ secrets.token }}
+
       - name: Build Ignition
         if: ${{ env.NEXT_PUBLIC_VERCEL_ENV != 'production' }}
         working-directory: ./ignition
@@ -125,7 +145,9 @@ jobs:
       - name: Deploy Ignition to Vercel
         if: ${{ env.NEXT_PUBLIC_VERCEL_ENV != 'production' }}
         working-directory: ./ignition
-        run: npx vercel deploy --prebuilt --no-wait --token=${{ secrets.token }}
+        run: |
+          url="$(npx vercel deploy --prebuilt --token=${{ secrets.token }})"
+          npx vercel alias set "$url" ${{ inputs.vercel-url-alias }} --token=${{ secrets.token }}
 
       - name: Build Ignition to Production
         if: ${{ env.NEXT_PUBLIC_VERCEL_ENV == 'production' }}
@@ -136,3 +158,16 @@ jobs:
         if: ${{ env.NEXT_PUBLIC_VERCEL_ENV == 'production' }}
         working-directory: ./ignition
         run: npx vercel deploy --prebuilt --prod --token=${{ secrets.token }}
+
+      - uses: actions/github-script@v7
+        with:
+          script: |
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: `**The deployment is available on Vercel**. Visit on [Vercel](${{ env.NEXT_PUBLIC_APP_URL }}/)
+
+              Deployment details:
+                - ${{ env.NEXT_PUBLIC_APP_URL }}/`
+            })
