fix(no-changelog): pr issues addressed

--- a/packages/ignition/tsconfig.json
+++ b/packages/ignition/tsconfig.json
@@ -26,6 +26,7 @@
       "@/locales": ["./src/app/locales/"],
       "@/locales/*": ["./src/app/locales/*"],
       "@/types": ["./src/app/types/"],
+      "@/types/*": ["./src/app/types/*"],
       "@/utils": ["./src/app/utils/"],
       "@/config": ["./src/config/"],
       "@/public/*": ["./public/*"],
