--- a/packages/ignition/package.json
+++ b/packages/ignition/package.json
@@ -25,6 +25,7 @@
     "@rocketclimb/content-collections": "latest",
     "@shikijs/rehype": "1.3.0",
     "@vercel/analytics": "^1.2.2",
+    "@vercel/edge-config": "^1.1.0",
     "@vercel/speed-insights": "^1.0.10",
     "algoliasearch": "^4.23.3",
     "change-case": "^5.4.4",
