--- a/packages/ignition/package.json
+++ b/packages/ignition/package.json
@@ -3,14 +3,17 @@
   "version": "0.2.3",
   "private": true,
   "scripts": {
-    "prebuild": "test -z $SKIP_GENERATE_IGNITION_STATICS && npm run generate-statics || echo '[IGNITION] skip statics generate'",
+    "prebuild": "npm run prebuild:cc && npm run prebuild:gs",
+    "prebuild:cc": "test -z $SKIP_GENERATE_CONTENT_COLLECTIONS && npm run generate-content-collections || echo '[IGNITION] skip content collections generate'",
+    "prebuild:gs": "test -z $SKIP_GENERATE_IGNITION_STATICS && npm run generate-statics || echo '[IGNITION] skip statics generate'",
     "build": "test -z $SKIP_IGNITION_BUILD && next build || echo '[IGNITION] skip build'",
-    "predev": "npm run generate-statics",
+    "predev": "npm run generate-content-collections && npm run generate-statics",
     "dev": "next dev",
-    "predev:all-icons": "npm run generate-statics:all-icons",
+    "predev:all-icons": "npm run generate-content-collections && npm run generate-statics:all-icons",
     "dev:all-icons": "NEXT_PUBLIC_VERCEL_ENV=develop next dev",
     "generate-statics": "npx ts-node -r tsconfig-paths/register ./src/statics-generator",
-    "generate-statics:all-icons": "NEXT_PUBLIC_VERCEL_ENV=develop npx ts-node -r tsconfig-paths/register ./src/statics-generator",
+    "generate-content-collections": "rocketclimb-cc",
+    "generate-statics:all-icons": "NEXT_PUBLIC_VERCEL_ENV=develop npm run generate-statics",
     "indexer": "npx ts-node -r tsconfig-paths/register ./src/algolia-indexer",
     "lint": "next lint",
     "format": "prettier --check src/* --write --ignore-path ../../.gitignore",
@@ -22,8 +25,8 @@
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.1.4",
     "@next/third-parties": "^14.1.4",
-    "@rocketclimb/code-block": "^0.0.2",
-    "@rocketclimb/content-collections": "latest",
+    "@rocketclimb/code-block": "^0.0.3",
+    "@rocketclimb/content-collections": "^0.1.3",
     "@shikijs/rehype": "1.3.0",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
