--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -101,7 +101,7 @@ jobs:
       - name: Branch Name to Url
         id: branch-to-url
         run: |
-          echo "URL_ID=$(echo "${{ github.head_ref }}" | tr -s ' ' | tr '[:upper:]' '[:lower:]' | sed 's,[ /],-,g')" >> $GITHUB_OUTPUT
+          echo "URL_ID=$(echo "${{ github.head_ref }}" | tr -s ' ' | tr '[:upper:]' '[:lower:]' | sed 's,[ /\.],-,g' | sed 's/--/-/g')" >> $GITHUB_OUTPUT
 
       - name: Get genereated package name
         id: generated-pkg-name
