--- a/.github/workflows/prepare-preview.yml
+++ b/.github/workflows/prepare-preview.yml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Extract Dependencies
         id: extract-dependencies
-        run: echo "DEPENDENCY_HASH=$(npx --yes @rocketclimb/sh extract-dependencies)" >> $GITHUB_OUTPUT
+        run: echo "DEPENDENCY_HASH=$(npx --yes @rocketclimb/sh extract-dependencies --registry=https://npm.pkg.github.com)" >> $GITHUB_OUTPUT
 
       - name: Cache node_modules
         uses: actions/cache@v4
