fix(icons): mark native dependencies as optional since most users just need react fix #106

--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -30,8 +30,10 @@
     "npm": ">=6.0.0"
   },
   "peerDependencies": {
+    "react": "*"
+  },
+  "optionalDependencies": {
     "nativewind": ">=2",
-    "react": "*",
     "react-native-svg": ">=15"
   },
   "devDependencies": {
