fix(icons): improve class name handling on native

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,7 +25,12 @@
   "rules": {
     "no-unused-vars": [
       "error",
-      { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }
+      {
+        "vars": "all",
+        "args": "after-used",
+        "ignoreRestSiblings": false,
+        "argsIgnorePattern": "^_"
+      }
     ],
     "react/react-in-jsx-scope": "off"
   },
