--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-packages/tailwind/src/index.native.test.css linguist-generated=false
-packages/tailwind/src/index.test.css linguist-generated=false
+packages/tailwind/src/index.native.test.css linguist-generated
+packages/tailwind/src/index.test.css linguist-generated
