--- a/packages/ignition/package.json
+++ b/packages/ignition/package.json
@@ -33,7 +33,7 @@
     "@vercel/speed-insights": "^1.0.10",
     "algoliasearch": "^4.23.3",
     "change-case": "^5.4.4",
-    "next": "14.1.4",
+    "next": "^14.2",
     "react": "~18.2",
     "react-dom": "~18.2",
     "react-instantsearch": "^7.7.2",
@@ -45,8 +45,8 @@
   "devDependencies": {
     "@types/mdx": "^2.0.13",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "~18.2",
+    "@types/react-dom": "~18.2",
     "autoprefixer": "^10.4.19",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
