--- a/packages/ignition/package.json
+++ b/packages/ignition/package.json
@@ -30,10 +30,11 @@
     "@shikijs/rehype": "1.3.0",
     "@vercel/analytics": "^1.2.2",
     "@vercel/edge-config": "^1.1.0",
-    "@vercel/speed-insights": "^1.0.10",
+    "adm-zip": "^0.5.14",
     "algoliasearch": "^4.23.3",
     "change-case": "^5.4.4",
     "next": "^14.2",
+    "original-fs": "^1.2.0",
     "react": "~18.2",
     "react-dom": "~18.2",
     "react-instantsearch": "^7.7.2",
@@ -43,6 +44,7 @@
     "rocketicons": "*"
   },
   "devDependencies": {
+    "@types/adm-zip": "^0.5.5",
     "@types/mdx": "^2.0.13",
     "@types/node": "^20",
     "@types/react": "~18.2",
