fix(no-changelog): decrease function size

--- a/packages/ignition/tsconfig.json
+++ b/packages/ignition/tsconfig.json
@@ -28,6 +28,7 @@
       "@/types": ["./src/app/types/"],
       "@/types/*": ["./src/app/types/*"],
       "@/utils": ["./src/app/utils/"],
+      "@/utils/*": ["./src/app/utils/*"],
       "@/config": ["./src/config/"],
       "@/public/*": ["./public/*"],
       "@/*": ["./src/*"],
