--- a/packages/ignition/package.json
+++ b/packages/ignition/package.json
@@ -41,7 +41,8 @@
     "rehype-slug-custom-id": "^1.1.0",
     "remark-frontmatter": "^5.0.0",
     "remark-mdx-frontmatter": "^4.0.0",
-    "rocketicons": "*"
+    "rocketicons": "*",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@types/adm-zip": "^0.5.5",
