fix(no-changelog): use tw-utils

--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -265,5 +265,8 @@
     "./package.json": {
       "default": "./package.json"
     }
+  },
+  "dependencies": {
+    "@rocketclimb/tw-utils": "^0.0.2"
   }
 }
