--- a/.github/workflows/prepare-preview.yml
+++ b/.github/workflows/prepare-preview.yml
@@ -39,11 +39,12 @@ jobs:
 
       - name: Set NPM config
         run: |
+          npm config set @rocketclimb:registry https://npm.pkg.github.com
           npm config set //npm.pkg.github.com/:_authToken ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract Dependencies
         id: extract-dependencies
-        run: echo "DEPENDENCY_HASH=$(npx --yes @rocketclimb/sh extract-dependencies --registry=https://npm.pkg.github.com)" >> $GITHUB_OUTPUT
+        run: echo "DEPENDENCY_HASH=$(npx --yes @rocketclimb/sh extract-dependencies)" >> $GITHUB_OUTPUT
 
       - name: Cache node_modules
         uses: actions/cache@v4
