chore(no-changelog): unit test for prefix

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 packages/tailwind/src/index.native.test.css linguist-generated
 packages/tailwind/src/index.test.css linguist-generated
+packages/tailwind/src/index.prefixed.test.css linguist-generated
